--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<app-navbar></app-navbar>
-<router-outlet></router-outlet>
+<div class="app">
+    <app-navbar></app-navbar>
+    <router-outlet></router-outlet>
+</div>
+
