--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,7 +4,8 @@ app-navbar {
     border-right-color: rgba(255,255,255,.3);
     color: white;
     position: fixed;
+    top: 0;
+    bottom: 0;
     padding: 1rem;
     height: 100%;
-    z-index: 1;
 }
